--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -30,8 +30,8 @@ jobs:
       - name: Upgrade npm to latest
         run: npm install -g npm@latest
 
-      - name: Install dependencies (omit optional deps, force install)
-        run: npm ci --omit=optional --force
+      - name: Install dependencies (omit optional deps)
+        run: npm install --omit=optional
 
       - name: Run Cypress tests
         uses: cypress-io/github-action@v6
