--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -9,10 +9,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Install dependencies without optional
+        run: npm install --no-optional
+
       - name: Cypress install
         uses: cypress-io/github-action@v6
         with:
-          # Disable running of tests within install job
           runTests: false
           build: npm run build
 
