--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,18 +1,26 @@
 name: Cypress Tests
 
-on: push
+on: [push]
 
 jobs:
-  install:
+  cypress-run:
     runs-on: macos-latest
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install dependencies without optional
+      - name: Install dependencies (without optional)
         run: npm install --omit=optional
 
-      - name: Cypress install
+      - name: Verify Cypress installation
+        run: npx cypress verify
+
+      - name: Run Cypress tests
         uses: cypress-io/github-action@v6
         with:
-          runTests: false
+          start: npm start
+          wait-on: 'http://localhost:3000'
+          record: true
+        env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
